# nrf51-blinky-cmake

./: .gitignore  CMakeLists.txt  Makefile  flash.sh  main.c  readme.md  tests.c  tests.h  upload.jlink
_build/: nrf51822_xxac.hex  nrf51822_xxac.map  nrf51822_xxac.out
